rocketmq & java gc